--- a/MNEPython/03Afirstlook.ipynb
+++ b/MNEPython/03Afirstlook.ipynb
@@ -74,21 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file D:\\CogitateExp1\\SA109\\SA109_run1.fif...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-3-fb6002b88685>:2: RuntimeWarning: This filename (D:\\CogitateExp1\\SA109\\SA109_run1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz or _meg.fif\n",
-      "  data1 = mne.io.read_raw_fif(path_data)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Opening raw data file D:\\CogitateExp1\\SA109\\SA109_run1.fif...\n",
       "    Read a total of 8 projection items:\n",
       "        generated with autossp-1.2.0 (1 x 306)  idle\n",
       "        generated with autossp-1.2.0 (1 x 306)  idle\n",
@@ -100,6 +86,14 @@
       "        generated with autossp-1.2.0 (1 x 306)  idle\n",
       "    Range : 19000 ... 860999 =     19.000 ...   860.999 secs\n",
       "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-fb6002b88685>:2: RuntimeWarning: This filename (D:\\CogitateExp1\\SA109\\SA109_run1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz or _meg.fif\n",
+      "  data1 = mne.io.read_raw_fif(path_data)\n"
      ]
     }
    ],
@@ -200,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -276,6 +270,13 @@
     "## References\n",
     "Smith, W.S. (1997) The Scientist and Engineer's Guide to Digital Signal Processing. California Technical Publishing. ISBN 0-9660176-3-3 [Online version](http://www.dspguide.com/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
