--- a/MNEPython/01Introduction.ipynb
+++ b/MNEPython/01Introduction.ipynb
@@ -25,9 +25,9 @@
     "The MNE Python toolbox has an excellent selection of [Tutorials](https://mne.tools/stable/auto_tutorials/index.html)\n",
     " and [Examples](https://mne.tools/dev/auto_examples/index.html). Nevertheless, the options are so many that the learning curve for new users is very steep. The FLUX pipeline provides a set of procedures for what we consider best practice at this moment in time. Consistent with an Open Science approach, the FLUX pipeline provides a validated and documented approach for MEG data analysis. Each analysis step comes with explanations and illustrations. Furthermore, the text is embedded with questions which will be useful for self-studies or they can be used in educational settings.\n",
     "\n",
-    "In general we will not link back to sections on the MNE Python webpage as they will change over time; nevertheless, users are are strongly encouraged to consult the website as they develop their skills and insight.\n",
+    "In general we will not link back to sections on the MNE Python webpage as they will change over time; nevertheless, users are are strongly encouraged to consult the website as they develop their skills and insight. \n",
     "\n",
-    "To install MNE Python please follow the comprehensive [instructions](https://mne.tools/dev/install/index.html) on the website. We have good experience using Spyder under the Abaconda3 framework."
+    "To install MNE Python please follow the comprehensive [instructions](https://mne.tools/dev/install/index.html) on the website. We have good experience using Spyder under the Anaconda3 framework."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
