--- a/MNEPython/01Introduction.ipynb
+++ b/MNEPython/01Introduction.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The core arguments for using MNE Python are\n",
     "\n",
-    "- The toolbox is supported by an active and dynamic group of developers ensuring that the latest analysis tools of the field are available.\n",
+    "- The MNE Python toolbox is supported by an active and dynamic group of developers ensuring that the latest analysis tools of the field are available.\n",
     "- The is code Open Source and henceforth compatible with Open Science approaches\n",
     "- The toolbox is based on Python which is free (as opposed to toolboxes based on Matlab).\n",
     "- Python is becoming the preferred programming language for novel data analysis approached including machine learning tools. The Python modules are under constant development by a huge open sources community ensuring the availability of state-of-the-art data science tools\n",
