--- a/MNEPython/01Introduction.ipynb
+++ b/MNEPython/01Introduction.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Introduction\n",
     "\n",
-    "### Why the FLUX pipeline?\n",
+    "\n",
+    "## Why the FLUX pipeline?\n",
     "\n",
     "The aim of the FLUX pipeline is to provide an introduction for using MNE Python to analyze full MEG data set. The pipeline will be used for education and as well as provide a common framework for MEG data analysis.\n",
     "\n",
@@ -17,10 +19,10 @@
     "- The toolbox is based on Python which is free (as opposed to toolboxes based on Matlab).\n",
     "- Python is becoming the preferred programming language for novel data analysis approached including machine learning tools. The Python modules are under constant development by a huge open sources community ensuring the availability of state-of-the-art data science tools\n",
     "\n",
-    "### Target users\n",
+    "## Target users\n",
     "The target users are researchers new to MNE Python as well as more advanced users seeking to standardize their analyses. The FLUX pipeline is particular geared towards cognitive neuroscientist with an interest in task-based paradigms. The developers the pipeline are cognitve neuroscientists with a strong interest on brain oscillations and multivariate approaches.\n",
     "\n",
-    "### Using the pipeline in self-studies and education\n",
+    "## Using the pipeline in self-studies and education\n",
     "\n",
     "The MNE Python toolbox has an excellent selection of [Tutorials](https://mne.tools/stable/auto_tutorials/index.html)\n",
     " and [Examples](https://mne.tools/dev/auto_examples/index.html). Nevertheless, the options are so many that the learning curve for new users is very steep. The FLUX pipeline provides a set of procedures for what we consider best practice at this moment in time. Consistent with an Open Science approach, the FLUX pipeline provides a validated and documented approach for MEG data analysis. Each analysis step comes with explanations and illustrations. Furthermore, the text is embedded with questions which will be useful for self-studies or they can be used in educational settings.\n",
@@ -29,27 +31,6 @@
     "\n",
     "To install MNE Python please follow the comprehensive [instructions](https://mne.tools/dev/install/index.html) on the website. We have good experience using Spyder under the Anaconda3 framework."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -68,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
