--- a/MNEPython/04ApplyingMaxFilter.ipynb
+++ b/MNEPython/04ApplyingMaxFilter.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Applying the MaxFilter after identifying bad sensors\n",
     "\n",
-    "### Introduction\n",
+    "## Introduction\n",
     "The aim of this section is to demonstrate the application of the 'Maxwell filtering' and signal-space separation (SSS). The implementation termed MaxFilter serves to reduce artifacts from both environmental sources and sensor noise. The procedure also performs some fine-tuning and reduces the cross-talk between co-located sensors. Prior to applying the MaxFilter algorithm it is advisable to to remove sensors that are flat or have excessive artifacts ('bad'). If this is not done, it might result in the artifacts from faulty sensors being distributed to other sensors.\n",
     "\n",
     "Specifically, the SSS is a technique derived from the physics of electromagnetism defined by the Maxwell equations (Taulu and Kajola 2005; Taulu and Simola 2006). The algorithm separates the measured signal into components attributable to sources respectively inside and outside the MEG sensor array. As the internal and external components are linearly independent, it is possible to suppress the contribution from the external components and thus reduce environmental noise sources. Maxwell filtering is a complementary procedure that omits the higher-order components dominated by sensor noise. In MNE-Python Maxwell filtering and SSS are performed by a single function.\n",
     "\n",
-    "### Preparation\n",
+    "## Preparation\n",
     "First load the relevant Python modules:"
    ]
   },
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
-    "data_path = r'C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
+    "data_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
+    "#data_path = r'C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
     "#result_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\results'\n",
     "result_path = r'D:\\FLUX\\results'\n",
     "file_name = 'training_raw'\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -73,7 +73,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif...\n",
+      "Opening raw data file C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-8-b03a13d9058b>:1: RuntimeWarning: This filename (C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  data1 = mne.io.read_raw_fif(path_file, allow_maxshield=True,preload=True,verbose=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    Read a total of 8 projection items:\n",
       "        generated with autossp-1.2.0 (1 x 306)  idle\n",
       "        generated with autossp-1.2.0 (1 x 306)  idle\n",
@@ -86,14 +100,6 @@
       "    Range : 208000 ... 1664999 =    208.000 ...  1664.999 secs\n",
       "Ready.\n",
       "Reading 0 ... 1456999  =      0.000 ...  1456.999 secs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-3-b03a13d9058b>:1: RuntimeWarning: This filename (C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
-      "  data1 = mne.io.read_raw_fif(path_file, allow_maxshield=True,preload=True,verbose=True)\n"
      ]
     }
    ],
@@ -109,26 +115,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Idenfity the faulty sensors\n",
+    "## Idenfity the faulty sensors\n",
     "The following scripts automatically identify the faulty sensors and show them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -516,12 +512,12 @@
        "<table class=\"table table-hover\">\n",
        "    <tr>\n",
        "        <th>Measurement date</th>\n",
-       "        <td>July 30, 2019  14:57:34 GMT</td>\n",
+       "        <td>January 01, 2000  00:00:00 GMT</td>\n",
        "        \n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Experimenter</th>\n",
-       "        <td>meguser (meguser)</td>\n",
+       "        <td>XXX</td>\n",
        "        \n",
        "    </tr>\n",
        "        <th>Participant</th>\n",
@@ -575,7 +571,7 @@
        "<Raw | training_raw-1.fif, 343 x 1457000 (1457.0 s), ~3.73 GB, data loaded>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,14 +584,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply the Maxfilter and calibration\n",
+    "## Apply the Maxfilter and calibration\n",
     "\n",
     "Apply the algorithm performing the Maxfiltering, SSS, calibration and cross-talk reduction:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -842,14 +838,14 @@
     "\n",
     "Publication, example:\n",
     "\n",
-    "\"TO DO\""
+    "\"Sensors with excessive artifacts were marked from the data sets using a semi-automatic detection algorithm (about 8 per particant). Subsequently the Signal-Space Seperation (SSS) method (Taulu and Kajola, 2005) was applied to reduce environmental artifacts. SSS decomposes the data using multipole moments based on spherical harmonics and removes the component of magnetic field originating from outside the MEG helmet.\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References\n",
+    "## References\n",
     "Taulu,S. and Kajola, M. (2005) Presentation of electromagnetic multichannel data: the signal space separation method. Journal of Applied Physics, 97(12):124905 doi:10.1063/1.1935742.\n",
     "\n",
     "Taulu, S. and Simola, J. (2006) Spatiotemporal signal space separation method for rejecting nearby interference in MEG measurements. Physics in Medicine and Biology, 51(7):1759–1768 doi:10.1088/0031-9155/51/7/008."
@@ -879,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
