fix blink annotation alignment

--- a/MNEPython/04ArtefactAnnotation.ipynb
+++ b/MNEPython/04ArtefactAnnotation.ipynb
@@ -140,6 +140,7 @@
     "\n",
     "n_blinks = len(eog_events)  \n",
     "onset = eog_events[:, 0] / data1.info['sfreq'] - 0.25  \n",
+    "onset -= data1._first_time  \n",
     "duration = np.repeat(0.5, n_blinks)  \n",
     "description = ['blink'] * n_blinks  \n",
     "annotations_blink = mne.Annotations(onset,duration,description)\n",
