--- a/MNEPython/02TheDataset.ipynb
+++ b/MNEPython/02TheDataset.ipynb
@@ -28,7 +28,7 @@
     "* EOG and ECG recordings \n",
     "* Stimulus delivery computer using Matlab/Psychtoolbox\n",
     "\n",
-    "The ongoing data were recorded at Fs = 1200 Hz. Please see <a href=\"https://www.neuosc.com/flux/\" target=\"_blank\">https://www.neuosc.com/flux/</a> for where to find the data.\n",
+    "Please see <a href=\"https://www.neuosc.com/flux/\" target=\"_blank\">https://www.neuosc.com/flux/</a> for where to find the data.\n",
     "\n",
     "\n",
     "\n",
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
