--- a/MNEPython/04ApplyingMaxFilter.ipynb
+++ b/MNEPython/04ApplyingMaxFilter.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
-    "#data_path = r'C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
+    "# data_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
+    "data_path = r'C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data'\n",
     "#result_path = r'C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\results'\n",
     "result_path = r'D:\\FLUX\\results'\n",
     "file_name = 'training_raw'\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -73,14 +73,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif...\n"
+      "Opening raw data file C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-8-b03a13d9058b>:1: RuntimeWarning: This filename (C:\\Users\\JensenO\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "<ipython-input-3-b03a13d9058b>:1: RuntimeWarning: This filename (C:\\Users\\Ole\\Dropbox\\FLUX\\Development\\FLUX\\data\\training_raw-1.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  data1 = mne.io.read_raw_fif(path_file, allow_maxshield=True,preload=True,verbose=True)\n"
      ]
     },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,14 +324,14 @@
       "        Interval 169:  840.000 -  844.999\n",
       "        Interval 170:  845.000 -  849.999\n",
       "        Interval 171:  850.000 -  854.999\n",
-      "        Interval 172:  855.000 -  859.999\n",
-      "        Interval 173:  860.000 -  864.999\n"
+      "        Interval 172:  855.000 -  859.999\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "        Interval 173:  860.000 -  864.999\n",
       "        Interval 174:  865.000 -  869.999\n",
       "        Interval 175:  870.000 -  874.999\n",
       "        Interval 176:  875.000 -  879.999\n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "<Raw | training_raw-1.fif, 343 x 1457000 (1457.0 s), ~3.73 GB, data loaded>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -709,6 +709,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n",
+      "Writing D:\\FLUX\\results\\training_rawsss-1.fif\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -720,8 +728,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting existing file.\n",
-      "Writing D:\\FLUX\\results\\training_rawsss-1.fif\n",
       "Closing D:\\FLUX\\results\\training_rawsss-1.fif\n",
       "[done]\n"
      ]
@@ -742,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -800,15 +806,6 @@
      "text": [
       "<ipython-input-11-55d8199cb291>:12: RuntimeWarning: This filename (D:\\FLUX\\results\\training_rawsss-2.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  dataTmp_sss.save(path_file_results,overwrite=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Closing D:\\FLUX\\results\\training_rawsss-2.fif\n",
-      "[done]\n",
-      "D:\\FLUX\\results\\training_rawsss-2.fif\n"
      ]
     }
    ],
@@ -875,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
