--- a/MNEPython/08TFRofPower.ipynb
+++ b/MNEPython/08TFRofPower.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Preparation\n",
     "\n",
-    "Important the relevant Python modules:"
+    "Import the relevant Python modules:"
    ]
   },
   {
@@ -691,11 +691,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -709,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
