Full update of package

--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "## Why the FLUX pipeline?\n",
     "\n",
-    "The aim of the FLUX pipeline is to provide an introduction for using some of most common toolboxes to analyze full MEG datasets. The pipeline will be used for education and as well as provide a common framework for MEG data analysis.\n",
+    "The aim of the FLUX pipeline is to provide a standard implemented as a tutorial for using some of most common toolboxes to analyze full MEG datasets. The pipeline will be used for education and as well as provide a common framework for MEG data analysis.\n",
     "\n",
     "This section will focus on [MNE-Python](https://mne.tools/stable/index.html). The core arguments for using MNE-Python are:\n",
     "\n",
     "- The MNE-Python toolbox is supported by an active and dynamic group of developers ensuring that the latest analysis tools are available.\n",
     "- The  toolbox and pipeline are Open Source and henceforth compatible with Open Science approaches.\n",
     "- The toolbox is based on Python which is free (as opposed to Matlab, for instance).\n",
-    "- Python is becoming the preferred programming language for novel data analysis approached including a wealth of machine learning tools. The Python modules are under constant development by a huge open sources community ensuring the availability of state-of-the-art data science tools.\n",
+    "- Python is becoming the preferred programming language for novel data analyses approaches including a wealth of machine learning tools. Python modules are under constant development by a huge open sources community ensuring the availability of state-of-the-art data science tools.\n",
     "\n",
     "## Target users\n",
     "\n",
@@ -56,7 +56,11 @@
     "\n",
     "Publication, example:\n",
     "\n",
-    "\"The data were analyzed using the open source toolbox MNE Python v0.23.0.\"\n",
+    "\"The data were analyzed using the open source toolbox MNE Python v0.23.0 (Gramfort et al., 2013) following the standards defined in the FLUX Pipeline (REF)\"\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "Alexandre Gramfort, Martin Luessi, Eric Larson, Denis A. Engemann, Daniel Strohmeier, Christian Brodbeck, Roman Goj, Mainak Jas, Teon Brooks, Lauri Parkkonen, and Matti S. Hämäläinen. MEG and EEG data analysis with MNE-Python. Frontiers in Neuroscience, 7(267):1–13, 2013. doi:10.3389/fnins.2013.00267.\n",
     "\n"
    ]
   }
