--- a/MNEPython/TheDataset.ipynb
+++ b/MNEPython/TheDataset.ipynb
@@ -34,18 +34,18 @@
     "\n",
     "\n",
     "## The paradigm \n",
-    "Trial started with a fixation dot followed by a cue pointing to the left or right (Figure 1). This indicated to the participants which of the two upcoming stimuli to attend. After a 1 s interval, two inward moving circular gratings were shown in both hemifields. After a random interval (1 – 3.5 s) a white dot was presented for 50ms at the centre of the grating in the cued hemifield. Participants were instructed to press a button (right index finger) as soon as they detected the dot. The stimuli presentation were implemented in Matlab using the Psychophysics Toolbox (Brainard, 1997) and the code bcan e found on the FLUX website. \n",
+    "Trials started with a fixation dot followed by a cue pointing to the left or right (Figure 1). This indicated to the participants which of the two upcoming stimuli to attend. After a 1 s interval, two inward moving circular gratings were shown in both hemifields. After a random interval (1 – 3.5 s) a white dot was presented for 50 ms at the centre of the grating in the cued hemifield. Participants were instructed to press a button (right index finger) as soon as they detected the dot. The stimuli presentation were implemented in Matlab using the Psychophysics Toolbox (Brainard, 1997) and the code can be found on the FLUX website. \n",
     "\n",
     "\n",
     "![paradigm.png](attachment:paradigm.png)\n",
-    "**Figure 1.** *The paradigm used for the MEG data collection in the FLUX pipeline. A cue directs the participants to attend left or right. This results in strong hemispheric lateralization of the posterior alpha power (8 – 12 Hz). Then follows the presentation of the moving gratings which will induce strong gamma power (60 – 90 Hz) in the visual cortex as well as visual evoked fields. Finally, the button response to the dot flash will result in gamma band activity in the motor cortex followed by suppression in the beta band (15 – 40 Hz). Since the task produces robust and well-documented modulations in the alpha, beta and gamma band as well as event-related fields it is well suited for the FLUX pipeline with a focus on the characterization of oscillatory brain activity and source modelling.*\n",
+    "**Figure 1.** *The paradigm used for the MEG data collection in the FLUX pipeline. A cue directs the participants to attend left or right. This results in strong hemispheric lateralization of the posterior alpha power (8 – 12 Hz). Then follows the presentation of the moving gratings which will induce strong gamma power (60 – 90 Hz) in the visual cortex as well as visual evoked fields. Finally, the button response to the dot flash will result in gamma band activity in the motor cortex followed by suppression in the beta band (15 – 40 Hz). Since the task produces robust and well-documented modulations in the alpha, beta and gamma band as well as event-related fields it is well suited for the FLUX pipeline with a focus on the characterization of oscillatory brain activity in the visual and motor regions as well as source modelling.*\n",
     "\n",
     "\n",
-    "**Question 1:** How might the alpha band and gamma band activity specifically be modulated with respect to left versus right  attention?\n",
+    "**Question 1:** How might the alpha band and gamma band activity specifically be modulated with respect to left versus right  directed attention?\n",
     "\n",
-    "**Question 2:** In which might the strongest modulation of alpha and gamma activity be expected? \n",
+    "**Question 2:** In which brain regions might the strongest modulation of alpha and gamma activity be expected? \n",
     "\n",
-    "**Question 3:** Describe some event-related fields that might be generated and modulated by the task. \n",
+    "**Question 3:** Provide examples of event-related fields generated and modulated by the various task components. \n",
     "\n",
     "\n",
     "## Preregistration and publication\n",
@@ -69,6 +69,13 @@
     "* Jensen, O., and Hanslmayr, S., 2020. The Role of Alpha Oscillations for Attention and Working Memory. In. Poeppel, D., Mangun, G.R., and Gazzaniga, M.S. (eds) The cognitive neurosciences, 6th MIT Press.\n",
     "* Brainard, D.H., 1997. The Psychophysics Toolbox. Spat Vis 10, 433–436.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
