--- a/MNEPython/TheDataset.ipynb
+++ b/MNEPython/TheDataset.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## The MEG system \n",
     "\n",
-    "The data were recorded using tyh MEGIN TRIUX system, installed in 2018 at the [Centre for Human Brain Health](https://www.birmingham.ac.uk/research/centre-for-human-brain-health/index.aspx). The TRIUX system has 306 sensors distributed over the head: 204 planar gradiometers and 102 magnetometers (noise-resilient ARMOR sensors). The MEG system is placed in a shielded room (2 layers of mu-metal and 1 layer of aluminium).  The system allows for concurrent electroencephalography (EEG) recordings from 64 electrodes as well as bipolar sensors. The system also allows for continuous monitoring of the head position. \n",
+    "The data were recorded using the MEGIN TRIUX system, installed in 2018 at the [Centre for Human Brain Health](https://www.birmingham.ac.uk/research/centre-for-human-brain-health/index.aspx). The TRIUX system has 306 sensors distributed over the head: 204 planar gradiometers and 102 magnetometers (noise-resilient ARMOR sensors). The MEG system is placed in a shielded room (2 layers of mu-metal and 1 layer of aluminium).  The system allows for concurrent electroencephalography (EEG) recordings from 64 electrodes as well as bipolar sensors. The system also allows for continuous monitoring of the head position. \n",
     "\n",
     "The peripherals of the MEG system applied to record the dataset include:\n",
     "\n",
