--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -33,7 +33,7 @@
     "To use the FLUX toolbox the following installations and downloads are required:\n",
     "\n",
     "1. Install the Python environment; we recommend Anaconda3 which provide Jupyter notebooks and Spyder; see [anaconda.com](https://www.anaconda.com/)\n",
-    "2. Instal MNE Python: [instructions](https://mne.tools/dev/install/index.html). To make 3D rendering possible we recommend\n",
+    "2. Install MNE Python: [instructions](https://mne.tools/dev/install/index.html). To make 3D rendering possible we recommend\n",
     "\n",
     ">  conda create --name=mne --channel=conda-forge mne\n",
     "\n",
