--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "Publication, example:\n",
     "\n",
-    "\"The data were analyzed using the open source toolbox MNE Python v0.24.0 (Gramfort et al., 2013) following the standards defined in the FLUX Pipeline (Ferrrante et al., 2022)\"\n",
+    "\"The data were analyzed using the open source toolbox MNE Python v0.24.0 (Gramfort et al., 2013) following the standards defined in the FLUX Pipeline (Ferrante et al., 2022)\"\n",
     "\n",
     "## References\n",
     "\n",
