--- a/MNEPython/DICS.ipynb
+++ b/MNEPython/DICS.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Source modeling of modulations of alpha band activty "
+    "## Source modeling of modulations of alpha band activity "
    ]
   },
   {
