--- a/MNEPython/DICS.ipynb
+++ b/MNEPython/DICS.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Source modeling of modulations of gamma band activty"
+    "# Source modeling of modulations of gamma band activity"
    ]
   },
   {
