--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drosstalk_file = os.path.join(data_path,'ct_sparse_SA.fif')\n",
+    "crosstalk_file = os.path.join(data_path,'ct_sparse_SA.fif')\n",
     "cal_file = os.path.join(data_path,'sss_cal_SA.dat')"
    ]
   },
