--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extracting condtion-specific trials\n",
+    "# Extracting condition-specific trials\n",
     "\n",
     "The aim of this section is to extract the trials according to the trigger channel. We will explain how the events can be generated from the stimulus channels and how to extract condition specific trials (epochs). Once the trials are extracted, bad epochs will be identified and excluded on based on their peak-to-peak signal amplitude.\n",
     "\n",
