--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -148,6 +148,20 @@
     "annotations_blink = mne.Annotations(onset,duration,description)"
    ]
   },
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\nNote: If you are using MNE 1.0.0 or higher and get the error: ValueError: orig_time should be the same to add/concatenate 2 annotations (got None != 2000-01-01 00:00:00+00:00), please replace the code above with this:",
+    "\n",
+    "n_blinks = len(eog_events)  \n",
+    "onset = eog_events[:, 0] / data1.info['sfreq'] - 0.25  \n",
+    "duration = np.repeat(0.5, n_blinks)  \n",
+    "description = ['blink'] * n_blinks  \n",
+    "orig_time = data1.info['meas_date'  \n",
+    "annotations_blink = mne.Annotations(onset,duration,description,orig_time)."
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -642,12 +656,10 @@
     "eog_events = mne.preprocessing.find_eog_events(data2,ch_name = 'EOG001') \n",
     "n_blinks = len(eog_events)  \n",
     "onset = eog_events[:, 0] / data1.info['sfreq'] - 0.25\n",
-    "onset -= data1._first_time  \n",
+    "onset -= data2._first_time  \n",
     "duration = np.repeat(0.5, n_blinks)  \n",
     "description = ['blink'] * n_blinks  \n",
     "annotations_blink = mne.Annotations(onset,duration,description)\n",
-    "\n",
-    "annotations_sacc = mne.Annotations(onset,duration,description)\n",
     "\n",
     "# Muscle\n",
     "threshold_muscle = 5  \n",
