--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "We will show here how artifacts can be identified and then annocated. The annotations will be represented in the FIF data file. Sections or trials will not be rejected at this stage; rather the annotations may be used later. For instance, they can be used to reject trials with eyeblinks or muscle contractions depending on their relevance for the analysis.  "
+    "We will show here how artifacts can be identified and then annotated. The annotations will be represented in the FIF data file. Sections or trials will not be rejected at this stage; rather the annotations may be used later. For instance, they can be used to reject trials with eyeblinks or muscle contractions depending on their relevance for the analysis.  "
    ]
   },
   {
@@ -89,7 +89,7 @@
     "\n",
     "$$ (max(hEOG) - min(hEOG)) / 4 $$\n",
     "\n",
-    " Segments being 500 ms long starting 250 ms prior to exceeding the threshold are annocated as blinks. "
+    " Segments being 500 ms long starting 250 ms prior to exceeding the threshold are annotated as blinks. "
    ]
   },
   {
@@ -549,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform the annocations on the rest of the dataset \n",
+    "## Perform artifact annotation on the rest of the dataset \n",
     "\n",
     "Now perform the annotation operations on the second FIF-file:"
    ]
