Adjustment to the plotting of the first two plots
The plots were showing all the epochs, not just the ones for the 'left' trials. This is now adjusted.

--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -422,7 +422,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "epochs.plot(n_epochs=10,picks=['grad'],event_id={'left':21});"
+    "epochs['left'].plot(n_epochs=10,picks=['grad'],event_id={'left':21});"
    ]
   },
   {
@@ -454,7 +454,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "epochs.plot(n_epochs=1,picks=['stim'],event_id={'left': 21});"
+    "epochs['left'].plot(n_epochs=1,picks=['stim'],event_id={'left': 21});"
    ]
   },
   {
