--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "Here we show how the artifacts associated with eye blinks can be marked automatically on the basis of the vertical EOG channel (EOG001 in our case). After bandpass filtering the EOG signal between 1 - 10 Hz, the threshold for blink detection is determined according to:\n",
     "\n",
-    "$$ (max(hEOG) - min(hEOG)) / 4 $$\n",
+    "$$ (max(vEOG) - min(vEOG)) / 4 $$\n",
     "\n",
     " Segments being 500 ms long starting 250 ms prior to exceeding the threshold are annotated as blinks. "
    ]
@@ -712,7 +712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('mne')",
    "language": "python",
    "name": "python3"
   },
@@ -727,6 +727,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "12a257d0362ebf338d2a0eaea5babc896c799574f6a031ea58f2eeafdd46f274"
+   }
   }
  },
  "nbformat": 4,
