--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -152,16 +152,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:**\n",
-    "If you are using MNE-Python 1.0.0 or higher, you may get the following error when running the artifact annotation code: <em>ValueError: orig_time should be the same to add/concatenate 2 annotations (got None != 2000-01-01 00:00:00+00:00)</em>, please replace the code above with the one below:\n",
-    "> <code>\n",
-    "> \n",
-    "> n_blinks = len(eog_events)  \n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Warning:<br />\n",
+    "    </b> If you are using MNE-Python 1.0.0 or higher, you may get the following error message when running the code above: \n",
+    "    <br /><br />\n",
+    "    <code>ValueError: orig_time should be the same to add/concatenate 2 annotations (got None != 2000-01-01 00:00:00+00:00)</code>\n",
+    "    <br /><br />\n",
+    "     in that case, replace the code with the one below:\n",
+    "    <br /> <br />\n",
+    "    <code>n_blinks = len(eog_events)\n",
     "onset = eog_events[:, 0] / data1.info['sfreq'] - 0.25  \n",
     "duration = np.repeat(0.5, n_blinks)  \n",
     "description = ['blink'] * n_blinks  \n",
     "orig_time = data1.info['meas_date'  \n",
-    "annotations_blink = mne.Annotations(onset,duration,description,orig_time)\n"
+    "annotations_blink = mne.Annotations(onset,duration,description,orig_time)</code>\n",
+    "</div>"
    ]
   },
   {
