--- a/MNEPython/Classification.ipynb
+++ b/MNEPython/Classification.ipynb
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "X = epochs_rs.get_data() \n",
+    "X = epochs_rs.get_data(picks='meg') \n",
     "X.shape"
    ]
   },
