added link to download the T1 scan
Added in both MNE-Python and FieldTrip notebooks

--- a/MNEPython/headmodel.ipynb
+++ b/MNEPython/headmodel.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Constructing the forward model\n",
     "\n",
-    "This section will cover how to contruct the head model (the forward model implemented as a lead field matrix) to be used in source modeling. This will done based on the structural T1 MRI. The model will be alinged to head postion of the subject in the MEG system. Note that this seciton requires access to FreeSurfer (a Unix/Linux software). For more details see https://mne.tools/stable/auto_tutorials/forward/30_forward.html\n",
+    "This section will cover how to contruct the head model (the forward model implemented as a lead field matrix) to be used in source modeling. This will done based on the structural T1 MRI. To download the scan, go to  https://doi.org/10.6084/m9.figshare.16661374.\n",
+    "\n",
+    "\n",
+    "The model will be alinged to head postion of the subject in the MEG system. Note that this seciton requires access to FreeSurfer (a Unix/Linux software). For more details see https://mne.tools/stable/auto_tutorials/forward/30_forward.html\n",
     "\n",
     "## Preparation\n",
     "\n",
