--- a/MNEPython/TFRofPower.ipynb
+++ b/MNEPython/TFRofPower.ipynb
@@ -69,17 +69,12 @@
     "run = '12'  # we have two runs for this subject, let's look at run = 1\n",
     "meg_suffix = 'meg'\n",
     "epo_suffix = 'epo'\n",
-    "tfr_suffix = 'tfr'\n",
     "\n",
     "deriv_root = r'Z:\\Projects\\FLUX\\MEG_data\\Course\\derivatives'  # path of the derivatives, similar structure to bids raw data \n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=epo_suffix, datatype='meg',\n",
     "            root=deriv_root, extension='fif', check=False)\n",
-    "print(bids_path.basename,bids_path.fpath)\n",
-    "                      \n",
-    "deriv_fname = bids_path.basename.replace(epo_suffix, tfr_suffix)\n",
-    "deriv_file = op.join(bids_path.directory, deriv_fname)\n",
-    "print(deriv_file)\n"
+    "print(bids_path.basename,bids_path.fpath)\n"
    ]
   },
   {
