--- a/MNEPython/bids_conversion.ipynb
+++ b/MNEPython/bids_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fill these out\n",
     "subject = '01'  # subject code in mTBI project\n",
-    "session = '01'  # data collection session within each run\n",
+    "session = '01'  # data collection session \n",
     "task = 'SpAtt'  # name of the task\n",
     "\n",
     "# specify specific file names\n",
@@ -99,20 +99,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_6824\\170541381.py:21: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
+      "  info = read_raw_bids(bids_path=bids_path, verbose=False).info\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 'Z:/Projects/FLUX/MEG_data/BIDS-data/sub-01/ses-01/anat/sub-01_ses-01_T1w.json'...\n"
+     ]
+    }
+   ],
    "source": [
     "# MRI bids conversion\n",
     "\"\"\" using the trans file created by coregistration, we now convert T1W MRI file \n",
     "to bids format\"\"\"\n",
+    "run = '01'\n",
+    "\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "                     task=task, run=run, root=bids_root)\n",
     "MRI_data_root = r'Z:\\Projects\\FLUX\\MRI_data'  # RDS folder for trans file\n",
     "trans_fname = op.join(MRI_data_root, 'trans.fif')\n",
-    "fs_sub_dir = r'Z:\\Projects\\mTBI_predict\\Collected_Data\\MRI_data\\sub-04'  # FreeSurfer directory for this subject #needs modifications\n",
-    "fs_sub = 'sub-04'\n",
-    "t1_fname = op.join(fs_sub_dir, fs_sub + '.nii')\n",
+    "fs_sub_dir = op.join(MRI_data_root, 'T1_anon_defaced')  # FreeSurfer directory for this subject #needs modifications\n",
+    "fs_sub = 'sub-01'\n",
+    "t1_fname = op.join(fs_sub_dir, fs_sub, 'mri', 'T1.mgz')\n",
     "\n",
     "# Create the BIDSpath object\n",
     "\"\"\" creat MRI specific bidspath object and then use trans file to transform \n",
@@ -132,7 +150,7 @@
     "\n",
     "t1w_bids_path = write_anat(\n",
     "    image=t1_fname, bids_path=t1w_bids_path,\n",
-    "    landmarks=landmarks, deface=True,\n",
+    "    landmarks=landmarks, deface=False,\n",
     "    overwrite=True, verbose=True)"
    ]
   }
